<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.ForgetPassword">
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/signInProgressBar"
        android:visibility="gone"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp"
        android:gravity="center"
        android:orientation="vertical">


    <!--Forgot Password Text-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/forgot_password"
        android:textColor="@color/bkColor"
        android:textSize="24sp" />
    <!--Forget Password Details-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/poppinsregular"
        android:gravity="center"
        android:text="@string/forgot_passwordDetails"
        android:textColor="@color/black"
        android:textSize="14sp" />
    <!--Email-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_ForgetPass_Email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:boxBackgroundColor="#40D9D9D9"
        app:boxStrokeColor="@color/bkColor"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="1dp"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/email_icon"
        app:startIconTint="@color/bkColor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgetPassEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/email_hint" />
    </com.google.android.material.textfield.TextInputLayout>



    <!--Password-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_ForgetPass_Password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:boxBackgroundColor="#40D9D9D9"
        app:boxStrokeColor="@color/bkColor"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="1dp"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/pass_icon"
        app:counterEnabled="true"
        app:counterMaxLength="12"
        app:startIconTint="@color/bkColor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgetPassPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:maxLength="12"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/passwordNew_hint" />
    </com.google.android.material.textfield.TextInputLayout>
    <!--Submit Button-->
    <Button
        android:id="@+id/submitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/bkColor"
        android:fontFamily="@font/poppinsregular"
        android:padding="18dp"
        android:text="@string/submit"
        android:textSize="16sp" />
    </LinearLayout>
</RelativeLayout>