<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.SignIn">

    <ProgressBar
        android:id="@+id/signInProgressBar"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/poppinsbold"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textColor="@color/bkColor"
            android:textSize="24sp" />

        <!--Email-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:boxBackgroundColor="#40D9D9D9"
            app:boxStrokeColor="@color/bkColor"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="1dp"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/email_icon"
            app:startIconTint="@color/bkColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signInEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:fontFamily="@font/poppinsregular"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>


        <!--Password-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:boxBackgroundColor="#40D9D9D9"
            app:boxStrokeColor="@color/bkColor"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="1dp"
            app:counterEnabled="true"
            app:counterMaxLength="12"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/pass_icon"
            app:startIconTint="@color/bkColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signInPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:fontFamily="@font/poppinsregular"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:maxLength="12" />
        </com.google.android.material.textfield.TextInputLayout>
        <!--Forgot Password-->
        <Button
            android:id="@+id/forgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/white"
            android:padding="0dp"
            android:text="@string/forgot_password"
            android:textColor="@color/bkColor"
            android:textSize="14sp" />

        <!--Sign In Button-->
        <Button
            android:id="@+id/signInBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/bkColor"
            android:fontFamily="@font/poppinsregular"
            android:padding="18dp"
            android:text="@string/sign_in"
            android:textSize="16sp" />

        <!--don't have account sign Up-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsregular"
                android:gravity="center"
                android:text="@string/donthaveacc"
                android:textColor="#000000"
                android:textSize="14sp" />

            <Button
                android:id="@+id/signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:gravity="left"
                android:paddingLeft="5dp"
                android:shadowColor="@color/white"
                android:stateListAnimator="@null"
                android:text="Sign Up"
                android:textAllCaps="false"
                android:textColor="@color/bkColor"
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>